--- a/playbook-deploy-Apache-Web.yaml
+++ b/playbook-deploy-Apache-Web.yaml
@@ -17,8 +17,8 @@
     - name: Copy html file to Apache web directory
       copy:
         dest: /var/www/html
-        src: /var/lib/jenkins/workspace/Deploy_Apache_Website/index.html
+        src: /var/lib/jenkins/workspace/Deploy Apache Web Yaml/index.html
     - name: Copy CSS file to Apache web directory
       copy:
         dest: /var/www/html
-        src: /var/lib/jenkins/workspace/Deploy_Apache_Website/style.css
+        src: /var/lib/jenkins/workspace/Deploy Apache Web Yaml/style.css
