--- a/playbook-deploy-Apache-Web.yaml
+++ b/playbook-deploy-Apache-Web.yaml
@@ -17,11 +17,11 @@
     - name: Copy html file to Apache web directory
       copy:
         dest: /var/www/html
-        src: /var/lib/jenkins/workspace/Deploy Apache Web Yaml/index.html
+        src: /var/lib/jenkins/workspace/Deploy Apache Yaml Script/index.html
     - name: Copy CSS file to Apache web directory
       copy:
         dest: /var/www/html
-        src: /var/lib/jenkins/workspace/Deploy Apache Web Yaml/style.css
+        src: /var/lib/jenkins/workspace/Deploy Apache Yaml Script/style.css
     - name: Copy Yaml script jpg file to Apache web directory
       copy:
         dest: /var/www/html
